Silicon_AspNetMVC/wwwroot/css/scss/sections/_signin.scss
#signin {
    margin-top: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 4rem;

    .main-holder {
        width: 480px;

        .section-title {
            margin-bottom: 2rem;
            align-items: flex-start;
            padding-right: 9rem;

            a {
                color: $theme;
            }
        }

        .login-box {
            display: flex;
            flex-direction: column;
            gap: 1.5rem;

            .email, .password {
                display: flex;
                flex-direction: column;
                width: 100%;

                label {
                    font-weight: 800;
                    margin-bottom: 0.2rem;
                }
            }

            .checkbox {
                display: flex;
                flex-direction: row;
                align-items: flex-start;
                margin-bottom: 1.2rem;

                input[type="checkbox"] {
                    margin-right: .8rem;
                    margin-top: .5rem;
                    margin-left: .4rem;
                    transform: scale(1.5);
                }

                p {
                    font-weight: 400;
                }
            }

            .social-box {
                display: flex;
                flex-direction: column;
                align-items: center;

                .social-media {
                    display: flex;
                    gap: 2.2rem;
                    width: 100%;

                    a {
                        text-align: center;
                        border: 1px solid $gray-300;
                        background-color: $gray-200;
                        color: $gray-700;
                        border-radius: 0.3rem;
                        padding: 10px;
                        font-weight: 700;
                        width: 100%;

                        i {
                            color: $gray-700;
                            padding-right: .5rem;
                        }
                    }
                }
            }

            input {
                border: 1px solid $gray-400;
                padding: 8px;
                border-radius: .3rem;
                margin-bottom: 1rem;

                &.input-validation-error {
                    border: 0.050rem solid $danger !important;
                    color: $danger;
                }
            }

            span.field-validation-error {
                color: $danger !important;
            }

            .divider {
                width: 100%;
                height: 1px;
                background-color: $gray-300;
                margin-top: 35px;
                margin-bottom: 15px;
            }

            .btn-theme {
                width: 30rem;
                box-shadow: 0 3px 10px #6366F180, 0 4px 5px #6366F160;
                margin-bottom: 2rem;
            }


            p {
                font-weight: 800;
            }
        }
    }
}

